--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "firebase-admin": "^5.12.0",
     "method-override": "^2.3.10",
     "moment": "^2.22.0",
+    "moment-duration-format": "^2.2.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "nodemailer": "^4.6.4",
