--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "moment-duration-format": "^2.2.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "node-extend": "^0.2.0",
     "nodemailer": "^4.6.4",
     "numeral": "^2.0.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "util": "^0.10.3"
   }
 }
