--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "firebase-admin": "^5.12.0",
+    "mathjs": "^4.1.1",
     "method-override": "^2.3.10",
     "moment": "^2.22.0",
     "moment-duration-format": "^2.2.2",
