--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "firebase-admin": "^5.12.0",
     "mathjs": "^4.1.1",
