--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment-duration-format": "^2.2.2",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "mysql": "^2.15.0",
     "node-extend": "^0.2.0",
     "nodemailer": "^4.6.4",
     "numeral": "^2.0.6",
